--- a/templates/index.html
+++ b/templates/index.html
@@ -23,32 +23,33 @@
   <div class="container">
 
       <div class="row">
-          <div class="col-xs-1 col-md-6" >               <!-- Kontajner pre zobrazovanie stavu kamery 1 -->
+          <div class="col-md-12" >               <!-- Kontajner pre zobrazovanie stavu kamery 1 -->
               <div class="thumbnail bot-pad alert-success" id='Teplota_thm'>
-                  <h4> Teplota:   n/a C <br>  <span class="label" id='Teplota'></span> </h4>     <!-- Nazov kamery a jej stitok s textovym oznacenim stavu -->
+
+                  <h1> Teplota:   n/a C <br>  <span class="label" id='Teplota'></span> </h1>     <!-- Nazov kamery a jej stitok s textovym oznacenim stavu -->
               </div>
           </div>
-          <div class="col-xs-1 col-md-6" >               <!-- Kontajner pre zobrazovanie stavu kamery 1 -->
-              <div class="thumbnail bot-pad alert-success" id='Vlhkost_thm'>
-                  <h4> Vlhkost:   n/a C <br>  <span class="label" id='Vlhkost'></span> </h4>     <!-- Nazov kamery a jej stitok s textovym oznacenim stavu -->
+          <div class="col-md-12" >               <!-- Kontajner pre zobrazovanie stavu kamery 1 -->
+              <div class="thumbnail bot-pad alert-default" id='Vlhkost_thm'>
+                  <h1> Vlhkost:   n/a C <br>  <span class="label" id='Vlhkost'></span> </h1>     <!-- Nazov kamery a jej stitok s textovym oznacenim stavu -->
               </div>
           </div>
 
-          <div class="col-xs-1 col-md-6">               <!-- Kontajner pre zobrazovanie stavu kamery 2 -->
-              <div class="thumbnail bot-pad alert-danger"  id='Otacky_thm'>
-                  <h2> Otacky:   rpm <br>  <span class="label" id='Otacky'></span></h2>     <!-- Nazov kamery a jej stitok s textovym oznacenim stavu -->
+          <div class="col-md-12">               <!-- Kontajner pre zobrazovanie stavu kamery 2 -->
+              <div class="thumbnail bot-pad alert-danger"  id='Ventilator_thm'>
+                  <h1> Ventilator:   rpm <br>  <span class="label" id='Ventilator'></span></h1>     <!-- Nazov kamery a jej stitok s textovym oznacenim stavu -->
               </div>
           </div>
 
-          <div class="col-xs-1 col-md-6" >               <!-- Kontajner pre zobrazovanie stavu kamery 3 -->
-              <div class="thumbnail bot-pad  alert-info" id='Stav_thm'>
-                  <h2> Aktualny pocet aut:   0 z 20 <br>  <span class="label" id='Pocet'></span></h2>     <!-- Nazov kamery a jej stitok s textovym oznacenim stavu -->
+          <div class="col-md-12" >               <!-- Kontajner pre zobrazovanie stavu kamery 3 -->
+              <div class="thumbnail bot-pad  alert-info" id='Auta_thm'>
+                  <h1> Aktualny pocet aut:   0 z 20 <br>  <span class="label" id='Auta'></span></h1>     <!-- Nazov kamery a jej stitok s textovym oznacenim stavu -->
               </div>
           </div>
 
-          <div class="col-xs-1 col-md-6" >               <!-- Kontajner pre zobrazovanie stavu kamery 4 -->
+          <div class="col-md-12" >               <!-- Kontajner pre zobrazovanie stavu kamery 4 -->
               <div class="thumbnail bot-pad " id='Button_thm'>
-                  <h2> Tlacidla <br>  <span class="label" id='Button'></span></h2>     <!-- Nazov kamery a jej stitok s textovym oznacenim stavu -->
+                  <h1> Tlacidla <br>  <span class="label" id='Button'></span></h1>     <!-- Nazov kamery a jej stitok s textovym oznacenim stavu -->
               </div>
           </div>
 </div>
@@ -67,68 +68,24 @@
                 socket.emit('refresh', "User has connected - MAIN PAGE, refersh data!");    //odosielanie udalosti serveru pre zaslanie aktualneho stavu kamier pri prvom pripojeny
                 console.log('CONNECTED');
             });
-
-                function setCamValue(status, id_frame, id_thumbnail, id_label) {  //zmena triedy kontajnera a jeho komponentov, parametre funkcie su nove data kamery, ktorej stav sa zmenil a id komponentov reprezentujuce jej stav
-                     if (status === 3) {
-                        $(id_label).text('LIVE & READY');                       //nastavenie tried pre stav LIVE + READY
-                        $(id_label).toggleClass('label-info', true);
-                        $(id_label).toggleClass('label-success', false);
-                        $(id_label).toggleClass('label-default', false);
-                        $(id_label).toggleClass('label-danger', false);
-                        $(id_thumbnail).toggleClass('alert-danger', true);
-                        $(id_thumbnail).toggleClass('alert-success', false);
-                        $(id_thumbnail).toggleClass('alert-free', false);
-                    }
-                    else if (status === 2) {
-                        $(id_label).text('LIVE');                               //nastavenie tried pre stav LIVE
-                        $(id_label).toggleClass('label-info', false);
-                        $(id_label).toggleClass('label-success', false);
-                        $(id_label).toggleClass('label-default', false);
-                        $(id_label).toggleClass('label-danger', true);
-                        $(id_thumbnail).toggleClass('alert-danger', true);
-                        $(id_thumbnail).toggleClass('alert-success', false);
-                        $(id_thumbnail).toggleClass('alert-free', false);
-                    }
-                    else if (status === 1) {
-                        $(id_label).text('READY');                              //nastavenie tried pre stav READY
-                        $(id_label).toggleClass('label-info', false);
-                        $(id_label).toggleClass('label-default', false);
-                        $(id_label).toggleClass('label-success', true);
-                        $(id_label).toggleClass('label-danger', false);
-                        $(id_thumbnail).toggleClass('alert-danger', false);
-                        $(id_thumbnail).toggleClass('alert-success', true);
-                        $(id_thumbnail).toggleClass('alert-free', false);
-                    }
-                    else if (status === 0) {
-                        $(id_label).text('FREE');                               //nastavenie tried pre stav nevyuzivania kamery video striznou
-                        $(id_label).toggleClass('label-info', false);
-                        $(id_label).toggleClass('label-success', false);
-                        $(id_label).toggleClass('label-default', true);
-                        $(id_label).toggleClass('label-danger', false);
-                        $(id_thumbnail).toggleClass('alert-danger', false);
-                        $(id_thumbnail).toggleClass('alert-success', false);
-                        $(id_thumbnail).toggleClass('alert-free', true);
-                    }
-                    else {
-                        $(id_label).text('ERROR_VALUE');                        //nastavenie tried pre chybny stav
-                        $(id_label).toggleClass('label-info', true);
-                        $(id_label).toggleClass('label-success', false);
-                        $(id_label).toggleClass('label-default', false);
-                        $(id_label).toggleClass('label-danger', false);
-                        $(id_thumbnail).toggleClass('alert-danger', false);
-                        $(id_thumbnail).toggleClass('alert-success', false);
-                        $(id_thumbnail).toggleClass('alert-free', true);
-                    }
-                };
-
                 socket.on('Teplota', function (e) {                            //cakanie na udalost 'kamera_1', zmena stavu kamery 1
                     console.log("Teplota:", e.value, " C");
-                    $(Teplota).text('Tepota');
+                    $(Teplota_thm).text((('Teplota: ').concat(e.value)).concat(' C'));
                 });
 
                 socket.on('Vlhkost', function (e) {                            //cakanie na udalost 'kamera_2', zmena stavu kamery 2
                     console.log("Vlhkost:", e.value, " %");
-                    $(Teplota).text('Vlhkost');
+                    $(Vlhkost_thm).text((('Vlhkost: ').concat(e.value)).concat(' %'));
+                });
+
+                socket.on('Ventilator', function (e) {                            //cakanie na udalost 'kamera_2', zmena stavu kamery 2
+                    console.log("Ventilator:", e.value, " RPM");
+                    $(Ventilator_thm).text((('Ventilator: ').concat(e.value)).concat(' RPM'));
+                });
+
+                socket.on('Auta', function (e) {                            //cakanie na udalost 'kamera_2', zmena stavu kamery 2
+                    console.log("Pocet aut:", e.act,"/",e.max);
+                    $(Auta_thm).text(((('Aktualny pocet aut: ').concat(e.act)).concat('/')).concat(e.max));
                 });
 
                   });
